[package]
name = "pulldown-dmark"
version = "0.1.0"
authors = [
	"Raph Levien <raph.levien@gmail.com>",
	"Marcus Klaas de Vries <mail@marcusklaas.nl>",
	"ThatsNoMoon <git@thatsnomoon.dev>,"
]
license = "MIT"
description = "A pull parser for Discord-flavored Markdown"
repository = "https://github.com/ThatsNoMoon/pulldown-dmark"
keywords = ["markdown"]
categories = ["text-processing"]
edition = "2018"
readme = "README.md"
exclude = ["/third_party/**/*", "/tools/**/*", "/specs/**/*", "/fuzzer/**/*", "/azure-pipelines.yml"]

build = "build.rs"

[[bin]]
name = "pulldown-dmark"
required-features = ["getopts"]
doc = false

[[bench]]
name = "html_rendering"
harness = false

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "markdown-it"
harness = false

[dependencies]
memchr = "2.3"
getopts = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
html5ever = "0.25"
markup5ever_rcdom = "0.1"
lazy_static = "1.4"
tendril = "0.4"
criterion = "0.3"
regex = "1.3"
serde_json = "1.0.61"
bincode = "1.3.1"

[features]
default = ["getopts"]
gen-tests = []
simd = []
